# genericTransport

./: CMakeLists.txt  main.cpp  main.cpp.in
gtest/: AddTest.cpp  Makefile
include/: Common.hpp  PBProtocol.hpp  PBSchemaAdaptor.hpp  TcpClientConnection.hpp  TcpClientTransport.hpp  TcpConnectionManager.hpp  TcpServerTransport.hpp
protoCppStore/protoFiles/: genericTransport.pb.cc  genericTransport.pb.h
protoFiles/: genericTransport.proto
src/: Main.cpp  PBProtocol.cpp  PBSchemaAdaptor.cpp  TcpClientConnection.cpp  TcpConnectionManager.cpp  TcpServerTransport.cpp
